--- a/public/index.html
+++ b/public/index.html
@@ -9,23 +9,23 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;600&display=swap" rel="stylesheet" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="apple-touch-icon" href="https://babylucyofficial.com/lll.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Meta -->
-    <title>Ape Finance</title>
+    <title>WifeSwap Dex</title>
     <meta
       name="description"
-      content="Cheaper and faster than Uniswap? Discover ApeFinance, the leading DEX on Binance Smart Chain (BSC) with the best farms in DeFi and a lottery for APES."
+      content="Cheaper and faster than Uniswap? Discover WifeSwap, the leading DEX on Binance Smart Chain (BSC) with the best farms in DeFi and a lottery for Waifu."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="twitter:image" content="https://pancakeswap.finance/images/hero.png" />
+    <meta name="twitter:image" content="https://babylucyofficial.com/lll.png" />
     <meta
       name="twitter:description"
-      content="The most popular AMM on BSC! Earn APES through yield farming or win it in the Lottery, then stake it in Syrup Pools to earn more tokens! Initial Farm Offerings (new token launch model pioneered by ApeFinance), NFTs, and more, on a platform you can trust."
+      content="The most popular AMM on BSC! Earn Waifu through yield farming or win it in the Lottery, then stake it in Syrup Pools to earn more tokens! Initial Farm Offerings (new token launch model pioneered by WifeSwap), NFTs, and more, on a platform you can trust."
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="🥞 ApeFinance - A next evolution DeFi exchange on Binance Smart Chain (BSC)" />
+    <meta name="twitter:title" content="🥞 WifeSwap - A next evolution DeFi exchange on Binance Smart Chain (BSC)" />
         <!-- GTAG -->
         <script>
           ;(function (w, d, s, l, i) {
